--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,19 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>memobook</title>
   </head>
   <body class="preload" hidden>
@@ -15,23 +27,52 @@
           <div class="card-columns container-fluid pt-3" id="notes"></div>
         </div>
         <div class="dashboard-buttons container-fluid py-3">
-          <button type="button" class="btn btn-primary" id="newNote">New Note</button>
+          <button type="button" class="btn btn-primary" id="newNote">
+            New Note
+          </button>
         </div>
       </div>
     </div>
     <div class="hidden note container-fluid d-flex flex-column py-3">
-      <div contenteditable class="form-control note-text flex-grow-1 mb-3"></div>
+      <div
+        contenteditable
+        class="form-control note-text flex-grow-1 mb-3"
+      ></div>
       <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text" id="tagsLabel">Tags</span>
         </div>
-        <input type="text" class="form-control tags-text" aria-describedby="tags">
+        <input
+          type="text"
+          class="form-control tags-text"
+          aria-describedby="tags"
+        />
       </div>
       <div>
-        <button type="button" class="btn btn-primary" id="saveNote">Save Changes</button>
-        <button type="button" class="btn btn-secondary" id="closeNote">Close Note</button>
-        <button type="button" class="btn btn-danger float-right" id="deleteNote">Delete</button>
+        <button type="button" class="btn btn-primary" id="saveNote">
+          Save Changes
+        </button>
+        <button type="button" class="btn btn-secondary" id="closeNote">
+          Close Note
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger float-right"
+          id="deleteNote"
+        >
+          Delete
+        </button>
       </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
+    <script src="renderer.js"></script>
   </body>
 </html>
